adds items and makes layout look decent

--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css" integrity="sha512-8M8By+q+SldLyFJbybaHoAPD6g07xyOcscIOQEypDzBS+sTde5d6mlK2ANIZPnSyxZUqJfCNuaIvjBUi8/RS0w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style.css">
     <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"> -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <script defer src=".app.js"></script>
+    <script defer src="app.js"></script>
     <title>Thomas Bachorz -- Full-Stack Software Engineer</title>
 </head>
     <body>
     <div class="name-and-image">
         <div class="my-pic">
-            <!-- <img src="./winner.JPG" alt="Thomas Bachorz"/> -->
+            <img src="./winner.JPG" alt="Thomas Bachorz"/>
         </div>
-        <div class="my-name">
+        <div class="my-info">
             <h1>Thomas Bachorz</h1>
             <h2>Full-Stack Software Developer</h2>
             <div class="find-me">
                 <h3>Find me @:</h3>
                 <div class="contacts">
-                    <a href=""><img src="" alt=""/></a>
+                    <a href="https://twitter.com/ThomasBachorz" class="fa fa-twitter"></a>
+                    <a href="https://www.linkedin.com/in/tjbachorz/" class="fa fa-linkedin"></a>
+                    <a href="https://tjbachorz.medium.com/" class="fa fa-medium"></a>
+                    <a href="https://github.com/TJBachorz" class="fa fa-github"></a>
+                    
                 </div>
             </div>
         </div>
