adds downloadable resume

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Thomas Bachorz</h1>
                 <h2>Full-Stack Software Developer</h2>
                 <div class="about">
-                    <p>This site is currently under construction... <br> But, we can still talk tech at the links below. <br> Or, you can download my <a class="resume" href="#" download>resume</a>.</p>
+                    <p>This site is currently under construction... <br> But, we can still talk tech at the links below. <br> Or, you can download my <a class="resume" href="./BACHORZ_THOMAS_RESUME_PERSONAL.pdf" download>resume</a>.</p>
                 </div>
             </div>
         </div>
