--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <main>
         <div class="name-and-image">
             <div class="my-pic">
-                <img src="./winner.JPG" alt="Thomas Bachorz"/>
+                <div class="image-style"></div>
+                <!-- <img src="./winner.JPG" alt="Thomas Bachorz"/> -->
             </div>
             <div class="my-info">
                 <h1>Thomas Bachorz</h1>
