--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="./style.css">
     <script defer src="app.js"></script>
     <title>Thomas Bachorz -- Full-Stack Software Engineer</title>
+    <link rel="shortcut icon" type="image/jpg" href=”favicon.ico”/>
 </head>
 <body>
     <main>
         <div class="name-and-image">
             <div class="my-pic">
-                <div class="image-style"></div>
             </div>
             <div class="my-info">
                 <h1>Thomas Bachorz</h1>
                 <h2>Full-Stack Software Developer</h2>
                 <div class="about">
-                    <p>This site is currently under construction... <br> But, we can still talk tech at the links below. <br> Or, you can download my <a class="resume" href="./BACHORZ_THOMAS_RESUME_PERSONAL.pdf" download>resume</a>.</p>
+                    <p>This site is currently under construction... <br> But, we can still talk tech at my links below. <br> Or, download my <a class="resume" href="./BACHORZ_THOMAS_RESUME_PERSONAL.pdf" download>resume</a>.</p>
                 </div>
             </div>
         </div>
@@ -33,12 +33,7 @@
                 <a href="mailto:TJBachorz@gmail.com" class="fa fa-envelope"></a>
             </section>
         </div>
-
-
-
     </main>
-
-
     <!-- <div id="fullpage">
         <div class="section home">
             <h1>the first section</h1>
