--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <script defer src="app.js"></script>
     <title>Thomas Bachorz -- Full-Stack Software Engineer</title>
-    <link rel="shortcut icon" type="image/jpg" href=”favicon.ico”/>
+    <link rel="icon" type="image/png" href="/favicon.ico"/>
 </head>
 <body>
     <main>
