--- a/index.html
+++ b/index.html
@@ -33,5 +33,35 @@
             </section>
         </div>
     </main>
+
+    <!-- <div id="fullpage">
+        <div class="section home">
+            <h1>the first section</h1>
+            <div class="not-slide">
+                <h1>the second section</h1>
+            </div>
+        </div>
+        <div class="section two">
+            <h1>the second section</h1>
+        </div>
+        <div class="section three">
+            <h1>the third section</h1>
+        </div>
+    </div> -->
+
+        
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.js" integrity="sha512-Gx/C4x1qubng2MWpJIxTPuWch9O88dhFFfpIl3WlqH0jPHtCiNdYsmJBFX0q5gIzFHmwkPzzYTlZC/Q7zgbwCw==" crossorigin="anonymous"></script>
+    
+        <script>
+
+            new fullpage("#fullpage", {
+                autoScrolling: true,
+                navigation: true,
+                navigationPosition: 'right',
+                scrollingSpeed: 1000,
+                fitToSectionDelay: 1500,
+            })
+
+        </script> -->
 </body>
 </html>
