adds modal with crude styling for functionality test

--- a/index.html
+++ b/index.html
@@ -25,12 +25,28 @@
         
         <div class="contacts">
             <section class="links">
-                <a href="https://twitter.com/ThomasBachorz" class="fa fa-twitter"></a>
-                <a href="https://www.linkedin.com/in/tjbachorz/" class="fa fa-linkedin"></a>
-                <a href="https://tjbachorz.medium.com/" class="fa fa-medium"></a>
-                <a href="https://github.com/TJBachorz" class="fa fa-github"></a>
-                <a href="mailto:TJBachorz@gmail.com" class="fa fa-envelope"></a>
+                <a data-link="https://twitter.com/ThomasBachorz" class="fa fa-twitter"><a>
+                <a data-link="https://www.linkedin.com/in/tjbachorz/" class="fa fa-linkedin"><a>
+                <a data-link="https://tjbachorz.medium.com/" class="fa fa-medium"><a>
+                <a data-link="https://github.com/TJBachorz" class="fa fa-github"><a>
+                <a data-link="mailto:TJBachorz@gmail.com" class="fa fa-envelope"><a>
             </section>
+        </div>
+
+        <div class="body-blackout"></div>
+
+        <div 
+            class="popup-modal shadow" 
+        data-popup-modal="one">
+            <img class="placeholder-img" src="https://smallimg.pngkey.com/png/small/2-24221_google-chrome-apple-fedex-and-mcdonalds-are-some.png"/>
+            <p class="font-weight-bold">
+                You are about to leave this site.  Are you sure?
+            </p>
+            <p class="font-weight-bold">
+                Long legal paragraph here.
+            </p>
+            <a class="modal-link" href=""><button class="modal-button">go to link</button></a>
+            <button class="popup-modal__close">cancel</button>
         </div>
     </main>
 
